--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
 		"preview": "vite preview --port 5173"
 	},
 	"dependencies": {
+		"@capacitor/android": "^8.0.0",
+		"@capacitor/cli": "^7.4.4",
+		"@capacitor/core": "^8.0.0",
+		"@capacitor/ios": "^8.0.0",
 		"@emotion/react": "^11.13.3",
 		"@emotion/styled": "^11.13.0",
 		"@mui/icons-material": "^6.1.6",
@@ -23,6 +27,7 @@
 	"devDependencies": {
 		"@vitejs/plugin-react": "^4.3.1",
 		"sass-embedded": "^1.93.3",
-		"vite": "^5.4.8"
+		"vite": "^5.4.8",
+		"vite-plugin-pwa": "^1.2.0"
 	}
 }
